--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,42 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <style>
+    .profile-loader {
+      text-align: center;
+      position: fixed;
+      /* center the element */
+      top:20%;
+      right: 0;
+      left: 0;
+      margin-right: auto;
+      margin-left: auto;
+      /* give it dimensions */
+      min-height: 10em;
+      width: 90%;
+    }
+    .profile-loader img {
+      max-width:200px
+    }
+    @keyframes pulse_animation {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.5); }
+      100% { transform: scale(1); }
+    }
+    .pulse {
+      animation-name: pulse_animation;
+      animation-duration: 1000ms;
+      transform-origin:center bottom;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+<app-root>
+  <div class="profile-loader">
+    <img class="pulse" width="100%" align="center" src="/assets/img/profile.svg">
+  </div>
+</app-root>
 </body>
 </html>
