--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <!--init own App code-by-color #76C8FF-->
-  <title>MW Profile</title>
+  <title>XY Profile</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
